Fix visibility hover option

--- a/projects/ngx-scrollbar/src/scrollbar/styles/visibility.scss
+++ b/projects/ngx-scrollbar/src/scrollbar/styles/visibility.scss
@@ -1,16 +1,18 @@
 @mixin visibility() {
   // Auto hide scrollbars
-  &[visibility="hover"] > .ng-scrollbar-grid-container > .ng-scrollbar-visible {
-    opacity: 0;
-    transition: opacity 120ms ease-out;
-  }
-
-  &:hover,
-  &:active,
-  &:focus {
+  &[visibility="hover"] {
     > .ng-scrollbar-visible {
-      opacity: 1;
-      transition: opacity 340ms ease-out;
+      opacity: 0;
+      transition: opacity 120ms ease-out;
+    }
+
+    &:hover,
+    &:active,
+    &:focus {
+      > .ng-scrollbar-visible {
+        opacity: 1;
+        transition: opacity 340ms ease-out;
+      }
     }
   }
 }
